Update. http rule into db.
